# roundtable

./: README.md  main.py  pyproject.toml
configs/agents/: buffett.yaml  feynman.yaml  moderator.yaml  musk.yaml  ravikant.yaml  stoic.yaml  synthesizer.yaml  thiel.yaml
src/roundtable/: agentloader.py
